fdo#60886: _SetGetExpFlds: use the custom operator<

The calls to upper_bound in SwDoc::FldsToExpand and SwDoc::FldsToCalc
unfortunately compare the pointers and not the values pointed to,
which causes all sorts of trouble around non-updated fields.
(regression from 2815396a1813cb3956c5aba066de49a7f34bc657)

Conflicts:
	sw/source/core/doc/docfld.cxx

Change-Id: I48817247719671a16821fcb851b17b628c960a66
(cherry picked from commit 9ca5383abfb7f2f785e9f2e2d5b2565b9a60bbab)